add influx db to the docker-compose file
