# doc/swagger/swagger.yml
@@ -25,8 +25,8 @@ paths:
                 name: test
                 family: test family
                 email: test@gmail.com
-                username: test
-                password: test021
+                username: test0211
+                password: test0211
       responses:
         "200":
           description: Successful response
@@ -61,8 +61,8 @@ paths:
             schema:
               type: object
               example:
-                username: test
-                password: test021
+                username: test0211
+                password: test0211
       responses:
         "200":
           description: Successful response
@@ -102,11 +102,8 @@ paths:
       tags:
         - website
       summary: list
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: Successful response
@@ -128,11 +125,8 @@ paths:
                   type: string
                   enum: [30s, 1m, 5m, 30m]
                 notify: true
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: Successful response
@@ -155,11 +149,8 @@ paths:
                   type: string
                   enum: [30s, 1m, 5m, 30m]
                 notify: true
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: Successful response
@@ -170,11 +161,8 @@ paths:
       tags:
         - website
       summary: delete
-      parameters:
-        - name: Authorization
-          in: header
-          schema:
-            type: string
+      security:
+        - bearerAuth: []
       responses:
         "200":
           description: Successful response
