# internal/httpHandlers/website/List.go
@@ -2,6 +2,7 @@ package website
 
 import (
 	"net/http"
+	"strings"
 	"uptime/internal/jwt"
 	"uptime/internal/models"
 	"uptime/pkg/logger"
@@ -10,7 +11,7 @@ import (
 )
 
 func List(c *gin.Context) {
-	token := c.GetHeader("Authorization")
+	token := strings.Replace(c.GetHeader("Authorization"), "Bearer ", "", 1)
 	claims, err := jwt.Parse(token)
 	if err != nil {
 		logger.Error(err.Error())
